--- a/brescia.css
+++ b/brescia.css
@@ -66,4 +66,12 @@ a {
         text-align: center;
         margin: 20px;
     }
+
+    #menu{
+    grid-column: span 2;
+    }
+
+    #content{
+    grid-column: span 6;
+    }
 }
